# shmy

./: Cargo.toml  LICENSE  README.md  TODO.txt  foo  rustfmt.toml  test.my
.github/workflows/: rust.yml
examples/: activate.my  advanced.my  args.my  commands.my  completions.yaml  continue.my  find.my  find_and_sort.my  pipes.my  profile
src/: cmds.rs  completions.rs  eval.rs  hooks.rs  job.rs  macros.rs  main.rs  prompt.rs  scope.rs  symlnk.rs  testcmds.rs  testeval.rs  tests.rs  utils.rs  wsl.rs
src/cmds/: alias.rs  basename.rs  cat.rs  cd.rs  chmod.rs  clear.rs  cp.rs  cut.rs  date.rs  defined.rs  df.rs  diff.rs  du.rs  echo.rs  env.rs  evalargs.rs  exit.rs  find.rs  flags.rs  grep.rs  help.rs  less.rs  ln.rs  ls.rs  mkdir.rs  mv.rs  open.rs  power.rs  prompt.rs  ps.rs  realpath.rs  reset.rs  rm.rs  run.rs  sort.rs  strings.rs  sudo.rs  touch.rs  vars.rs  wc.rs  (+1 more)
