[package]
name = "mysh"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
chrono-tz = "0.9"
clearscreen = "3.0.0"
crossterm = "0.28"
colored = "2"
ctor = "0.2.8"
ctrlc = "3.2"
directories = "5.0"
filetime = "0.2"
gag = "1.0.0"
glob = "0.3.1"
indicatif = "0.17.3"
lazy_static = "1.4.0"
nix = { version = "0.29", features = ["user"] }
os_pipe = "1.1.4"
regex = "1"
rustyline = { version = "14.0", features = ["derive"] }
terminal_size = "0.3.0"
url = "2.2"
which = "6.0"

[target.'cfg(unix)'.dependencies]
uzers = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
#   "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

windows-sys = { version = "0.59", features = [
] }
