[package]
name = "shmy"
version = "0.20.0"
edition = "2021"
authors = ["Cristian Vlasceanu"]
description = "Command line interpreter with builtin, Unix-like commands, and WSL symbolic link support"
readme = "README.md"
repository = "https://github.com/cristivlas/shmy"
license = "MIT"
keywords = ["shell", "wsl"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
chrono = "0.4"
crossterm = "0.28"
colored = "2.1.0"
console = "0.15"
ctor = "0.2.8"
ctrlc = "3.4"
directories = "5.0"
filetime = "0.2"
gag = "1.0.0"
glob = "0.3.1"
indicatif = "0.17"
memmap2 = "0.9"
os_pipe = "1.1.4"
open = { version = "5.3", features = [  "shellexecute-on-windows"] }
regex = "1.10"
rustyline = { version = "14.0", features = ["derive"] }
strsim = "0.11"
sysinfo = "0.31"
tempfile = "3.2"
tzdb = "0.7"
url = "2.2"
yaml-rust = { version = "0.9", package = "yaml-rust2" }
which = "6.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }
uzers = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_JobObjects",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

windows-sys = { version = "0.59", features = [
] }

[[bin]]
name = "shmy"
path = "src/main.rs"